# Yes2All

./: .gitignore  AGENTS.md  LICENSE  README.md  install-linux.sh  install-macos.sh  install-win.bat  pyproject.toml
ai/: ai-coder.agent.md  ai-coder.instructions.md  spec.txt
scripts/: render_icon.py  verify_click.py
src/yes2all/: __init__.py  cdp.py  cli.py  finder.py  menubar.py  service.py  state.py
