[project]
name = "yes2all"
version = "1.0.2"
description = "Auto-approve agent tool prompts in Cursor / VS Code via CDP."
license = "Apache-2.0"
authors = [{ name = "Mikhail Yurasov", email = "me@yurasov.me" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "websockets>=13",
    "httpx>=0.27",
    "typer>=0.12",
    "rumps>=0.4 ; sys_platform == 'darwin'",
]

[project.scripts]
yes2all = "yes2all.cli:app"

[dependency-groups]
dev = ["ruff>=0.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yes2all"]

[tool.hatch.build.targets.wheel.force-include]
"src/yes2all/assets" = "yes2all/assets"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
